[gd_scene load_steps=5 format=2]

[ext_resource path="res://start.gd" type="Script" id=1]
[ext_resource path="res://Credits.tscn" type="PackedScene" id=2]
[ext_resource path="res://campaigns/act1/0-exposition.tscn" type="PackedScene" id=3]
[ext_resource path="res://dynamic_font.tres" type="DynamicFont" id=4]

[node name="Node" type="Node" index="0"]

script = ExtResource( 1 )
credits = ExtResource( 2 )
next_scene = ExtResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="." index="0"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -266.0
margin_top = -135.5
margin_right = 266.0
margin_bottom = 135.5
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Margin" ]

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_right = 532.0
margin_bottom = 271.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MarginContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_right = 524.0
margin_bottom = 271.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Rect" ]

[node name="Button" type="Button" parent="MarginContainer/MarginContainer/VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 516.0
margin_bottom = 82.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Start"
flat = false
align = 1
_sections_unfolded = [ "custom_fonts" ]

[node name="Button2" type="Button" parent="MarginContainer/MarginContainer/VBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 86.0
margin_right = 516.0
margin_bottom = 168.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Credits"
flat = false
align = 1
_sections_unfolded = [ "custom_fonts" ]

[node name="Button3" type="Button" parent="MarginContainer/MarginContainer/VBoxContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 172.0
margin_right = 516.0
margin_bottom = 254.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Exit"
flat = false
align = 1
_sections_unfolded = [ "custom_fonts" ]

[connection signal="pressed" from="MarginContainer/MarginContainer/VBoxContainer/Button" to="." method="_on_button_start"]

[connection signal="pressed" from="MarginContainer/MarginContainer/VBoxContainer/Button2" to="." method="_on_button_credits"]

[connection signal="pressed" from="MarginContainer/MarginContainer/VBoxContainer/Button3" to="." method="_on_button_exit"]


